[gd_scene load_steps=15 format=3 uid="uid://cqdrk05neld4j"]

[ext_resource type="Script" path="res://Character/character.gd" id="1_h41gx"]
[ext_resource type="Texture2D" uid="uid://c7i0ioq3dmglg" path="res://Art/knightSprites.png" id="2_fhbiw"]
[ext_resource type="Texture2D" uid="uid://dph0att3onwqx" path="res://Art/Slash.png" id="3_mtc4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7gnnk"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vn34"]
size = Vector2(35, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h63dg"]
size = Vector2(5, 70)

[sub_resource type="CylinderMesh" id="CylinderMesh_4c1b1"]
top_radius = 3.0
bottom_radius = 3.0
height = 75.0
rings = 13

[sub_resource type="Gradient" id="Gradient_xbxso"]
colors = PackedColorArray(0, 0, 0, 1, 0.162066, 0.162066, 0.162066, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a1225"]
gradient = SubResource("Gradient_xbxso")

[sub_resource type="Animation" id="Animation_k3ywl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorHolder/Slash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_5clig"]
resource_name = "slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorHolder/Slash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5l7d"]
_data = {
"RESET": SubResource("Animation_k3ywl"),
"slash": SubResource("Animation_5clig")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uelhp"]
bg_color = Color(0.266575, 0.266575, 0.266575, 0.435294)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5vm4"]
bg_color = Color(0.94902, 0.054902, 0.211765, 0.564706)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Character" type="CharacterBody2D" groups=["Player"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_h41gx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7gnnk")

[node name="CursorHolder" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CursorHolder"]
rotation = 1.57079
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_fhbiw")
hframes = 40
frame = 3

[node name="AttackArea" type="Area2D" parent="CursorHolder"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CursorHolder/AttackArea"]
position = Vector2(47.5, -0.5)
shape = SubResource("RectangleShape2D_8vn34")
disabled = true

[node name="Slash" type="Sprite2D" parent="CursorHolder"]
position = Vector2(10, 0)
scale = Vector2(4, 4)
texture = ExtResource("3_mtc4c")
hframes = 4
vframes = 4
frame = 13

[node name="DefendArea" type="Area2D" parent="CursorHolder" groups=["Player", "Shield"]]
position = Vector2(0, -0.5)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CursorHolder/DefendArea"]
position = Vector2(40, 0.5)
shape = SubResource("RectangleShape2D_h63dg")
disabled = true

[node name="Shield" type="MeshInstance2D" parent="CursorHolder"]
position = Vector2(40, 0)
mesh = SubResource("CylinderMesh_4c1b1")
texture = SubResource("GradientTexture2D_a1225")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w5l7d")
}

[node name="SlashCooldown" type="Timer" parent="."]
wait_time = 0.7

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 48.0
offset_top = 385.0
offset_right = 825.0
offset_bottom = 511.0

[node name="HPBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -826.0
offset_top = 385.0
offset_right = -54.0
offset_bottom = 511.0
theme_override_styles/background = SubResource("StyleBoxFlat_uelhp")
theme_override_styles/fill = SubResource("StyleBoxFlat_a5vm4")
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="debuglable" type="Label" parent="Control"]
layout_mode = 0
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 48.0

[node name="debuglable2" type="Label" parent="Control"]
layout_mode = 0
offset_left = -21.0
offset_top = 50.0
offset_right = 19.0
offset_bottom = 73.0

[node name="debuglable3" type="Label" parent="Control"]
layout_mode = 0
offset_left = -21.0
offset_top = 75.0
offset_right = 19.0
offset_bottom = 98.0

[connection signal="body_entered" from="CursorHolder/AttackArea" to="." method="_attackAreaDetected"]
[connection signal="area_entered" from="CursorHolder/DefendArea" to="." method="_on_defend_area_area_entered"]
[connection signal="body_entered" from="CursorHolder/DefendArea" to="." method="_on_defend_area_body_entered"]
[connection signal="timeout" from="SlashCooldown" to="." method="_on_slash_cooldown_timeout"]
